--- a/index.html
+++ b/index.html
@@ -18,33 +18,35 @@
             <div class="container">
                 <div class="slider-wrapper" tabindex="0">
 
-                    <img :src="slides[activeImage].image" alt>
                     <div class="item">
+                        <div class="prev" @click="prev()"></div>
+                        <!--  buttons -->
+                        <img :src="slides[activeImage].image" alt>
                         <div class="text">
-                            <h3>{{slides.title}}</h3>
+                            <h3>{{slides[activeImage].title}}</h3>
                             <p>
-                                {{slides.text}}
+                                {{slides[activeImage].text}}
                             </p>
                         </div>
+                        <div class="next" @click="next()"></div>
+                        <!--  buttons -->
                     </div>
                     <!-- End item -->
                     <div class="thumbs">
-                        <div class="prev" @click="prev()"></div>
-                        <div class="next" @click="next()"></div>
-                        <div class="thumb active">
+                        <div class="thumb active" @click="changeImage(0)">
                             <img src="./assets/img/01.webp" alt="Svezia" />
                         </div>
-                        <div class="thumb">
+                        <div class="thumb" @click="changeImage(1)">
                             <img src="./assets/img/02.webp"
                                 alt="Ratchet & Clank" />
                         </div>
-                        <div class="thumb">
+                        <div class="thumb" @click="changeImage(2)">
                             <img src="./assets/img/03.webp" alt="Fortnite" />
                         </div>
-                        <div class="thumb">
+                        <div class="thumb" @click="changeImage(3)">
                             <img src="./assets/img/04.webp" alt="Stray" />
                         </div>
-                        <div class="thumb">
+                        <div class="thumb" @click="changeImage(4)">
                             <img src="./assets/img/05.webp" alt="Avengers" />
                         </div>
                     </div>
