--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Slider</title>
         <!-- Title -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+            crossorigin="anonymous">
+        <!-- Bootstrap link -->
         <link rel="stylesheet" href="./assets/css/style.css" />
         <!-- CSS link -->
     </head>
@@ -35,13 +41,16 @@
                         <!--  buttons -->
                     </div>
                     <!-- End item -->
+
                     <div class="thumbs" @mouseover="stopAutoplay"
                         @mouseout="startAutoplay">
+
                         <div class="thumb" v-for="(slide, index) in slides"
                             :key="index" @click="changeImage(index)"
                             :class="{ active: activeImage === index }">
-                            <img :src="slide.image" :alt="slide.title" />
+                            <img :src="slide.image" alt="slide.title" />
                         </div>
+
                         <!-- <div class="thumb" @click="changeImage(index)">
                             <img src="./assets/img/02.webp"
                                 alt="Ratchet & Clank" />
