--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="thumb" v-for="(slide, index) in slides"
                             :key="index" @click="changeImage(index)"
                             :class="{ active: activeImage === index }">
-                            <img :src="slide.image" alt="slide.title" />
+                            <img :src="slide.image" :alt="slide.title" />
                         </div>
 
                         <!-- <div class="thumb" @click="changeImage(index)">
